--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>app</title><script defer="defer" src="/test-voice-detection/bundle.js"></script></head><body><div id="app"></div></body></html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Web Voice Detection</title><script defer="defer" src="/test-voice-detection/bundle.js"></script></head><body><div id="app"></div></body></html>
